test/classes/vass/ref-like-intents/out-superclass.good
out-superclass.chpl:13: error: unresolved call 'procOutD(unmanaged C)'
out-superclass.chpl:6: note: this candidate did not match: procOutD(out arg: unmanaged D)
out-superclass.chpl:13: note: because call actual argument #1 with type unmanaged C
out-superclass.chpl:6: note: is passed to formal 'out arg: unmanaged D'
